build: Improve build
Signed-off-by: unknowIfGuestInDream <liang.tang.cx@gmail.com>